<resources>
    <string name="app_name">Aslapov</string>

    <string name="root_warning">"Обнаружен root. Ваши данные из приложения могут украсть.</string>

    <!-- region Bottom Navigation -->
    <string name="bottom_navigation_feed">feed</string>
    <string name="bottom_navigation_new_feed">new feed</string>
    <string name="bottom_navigation_profile">profile</string>
    <!-- endregion -->

    <!-- region Экран Логина -->
    <string name="login_workplaces">Workplaces</string>
    <string name="login_logo">Найди своё место</string>
    <string name="login_signin">Войти</string>
    <string name="login_signup">Регистрация по почте</string>
    <!-- endregion -->

    <!-- region Экран Авторизации -->
    <string name="sign_in_email">E-mail</string>
    <string name="sign_in_password">Пароль</string>
    <string name="sign_in_go_to_register">Перейти к регистрации</string>
    <string name="sign_in_next">Далее</string>
    <string name="sign_in_login">Вход</string>
    <string name="sign_in_email_invalid">E-mail не должен быть пустым</string>
    <string name="sign_in_password_invalid">Пароль не должен быть пустым</string>
    <!-- endregion -->

    <!-- region Экран Регистрации -->
    <string name="sign_up_back">Регистрация</string>
    <string name="sign_up_email">E-mail</string>
    <string name="sign_up_password">Пароль</string>
    <string name="sign_up_register_already">Уже зарегистрирован</string>
    <string name="sign_up_next">Далее</string>
    <string name="sign_up_firstname">Имя</string>
    <string name="sign_up_lastname">Фамилия</string>
    <string name="sign_up_nickname">Никнейм</string>
    <string name="sign_up_birthday">Дата рождения</string>
    <string name="sign_up_register">Зарегистрироваться</string>
    <string name="sign_up_email_invalid">E-mail не распознан</string>
    <string name="sign_up_password_invalid">Пароль должен быть не короче 8 символов и должен содержать хотя бы одну цифру, большую и маленькую букву</string>
    <string name="sign_up_firstname_error">Проверьте, что используются только латинские символы</string>
    <string name="sign_up_lastname_error">Проверьте, что используются только латинские символы</string>
    <string name="sign_up_nickname_error">Проверьте, что используются только латинские символы и цифры</string>
    <string name="sign_up_birthday_error">Дата должна быть введена в формате ГГГГ-ММ-ДД</string>
    <string name="sign_up_calendar_title">Выберите дату</string>
    <!-- endregion -->

    <!-- region Экран Приветствия -->
    <string name="welcome">Nice to meet you</string>
    <string name="welcome_info">Теперь ты можешь смотреть и делать публикации</string>
    <string name="welcome_go_to_feed">Перейти к ленте</string>
    <!-- endregion -->

    <!-- region Экран Заглушки -->
    <string name="dummy_logout">Выйти из аккаунта</string>
    <string name="dummy_logout_error">Ошибка выхода из аккаунта</string>
    <!-- endregion -->

    <!-- region Экран Ленты -->
    <string name="feed_header">Популярное</string>
    <string name="feed_emptiness">Пустота</string>
    <string name="feed_emptiness_advise">Вам нужны друзья, чтобы лента стала живой</string>
    <string name="feed_emptiness_find_friends">Найти друзей</string>
    <string name="feed_error">Упс...</string>
    <string name="feed_error_description">Что-то пошло не так</string>
    <string name="feed_error_refresh">Обновить</string>
    <!-- endregion -->

    <!-- region Пост -->
    <string name="post_text">Soprano, we like to keep it on a high note. It\'s levels to it, you and I know</string>
    <string name="post_location">Россия, Москва</string>
    <!-- endregion -->

    <!-- region Экран Профиля -->
    <string name="profile_posts">Посты</string>
    <string name="profile_posts_emptiness">Если молчать, люди никогда не узнат о вас</string>
    <string name="profile_posts_create">Создать пост</string>
    <string name="profile_likes">Лайки</string>
    <string name="profile_likes_emptiness">Вы ещё не поставили ни одного лайка, но можете из ленты</string>
    <string name="profile_likes_go_to_feed">Перейти к ленте</string>
    <string name="profile_friends">Друзья</string>
    <string name="profile_friends_emptiness">Вы пока одиноки в сервисе, но это можно исправить</string>
    <string name="profile_friends_find">Найти друзей</string>
    <string name="profile_emptiness">Пустота</string>
    <string name="profile_network_connection_error">Проверьте подключение к интернету</string>
    <string name="profile_find_more_friends">Найти ещё друзей</string>
    <string name="profile_error">Упс...</string>
    <string name="profile_error_description">Что-то пошло не так</string>
    <string name="profile_error_refresh">Обновить</string>
    <!-- endregion -->

    <!-- region Экран Редактирования Профиля -->
    <string name="profile_edit_title">Редактирование профиля</string>
    <string name="profile_edit_firstname">Имя</string>
    <string name="profile_edit_lastname">Фамилия</string>
    <string name="profile_edit_nickname">Никнейм</string>
    <string name="profile_edit_birthday">Дата рождения</string>
    <string name="profile_edit_firstname_error">Проверьте, что используются только латинские символы</string>
    <string name="profile_edit_lastname_error">Проверьте, что используются только латинские символы</string>
    <string name="profile_edit_nickname_error">Проверьте, что используются только латинские символы и цифры</string>
    <string name="profile_edit_birthday_error">Дата должна быть введена в формате ГГГГ-ММ-ДД</string>
    <string name="profile_edit_calendar_title">Выберите дату</string>
    <string name="profile_edit_save">Сохранить</string>
    <string name="profile_edit_network_connection_error">Проверьте подключение к интернету</string>
    <!-- endregion -->

    <!-- region Экран Поиска друзей -->
    <string name="find_friends_title">Поиск друзей</string>
    <string name="find_friends_hint">Имя или никнейм друга</string>
    <!-- endregion -->

    <!-- region Экран Новый пост -->
    <string name="new_post_welcome">Чем хотите поделиться?</string>
    <string name="new_post_camera_activity_not_found">Не найдено приложение с камерой</string>
    <!-- endregion -->

    <plurals name="age">
        <item quantity="zero">%d год</item>
        <item quantity="one">%d год</item>
        <item quantity="few">%d года</item>
        <item quantity="many">%d лет</item>
        <item quantity="other">%d лет</item>
    </plurals>

</resources>
