<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.profile.ProfileEditFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/profile_edit_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/icon_back"
        app:title="@string/profile_edit_title"
        app:titleTextAppearance="@style/TextAppearance.App.Toolbar.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/profile_edit_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="24dp"
        android:hint="@string/profile_edit_nickname"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.App.EditText.Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_edit_toolbar" />

    <EditText
        android:id="@+id/profile_edit_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="24dp"
        android:hint="@string/profile_edit_firstname"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.App.EditText.Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_edit_nickname" />

    <EditText
        android:id="@+id/profile_edit_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="24dp"
        android:hint="@string/profile_edit_lastname"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.App.EditText.Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_edit_firstname" />

    <EditText
        android:id="@+id/profile_edit_birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="24dp"
        android:drawableEnd="@drawable/icon_calendar"
        android:hint="@string/profile_edit_birthday"
        android:inputType="date"
        android:textAppearance="@style/TextAppearance.App.EditText.Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_edit_lastname" />

    <Button
        android:id="@+id/profile_edit_save"
        style="@style/Widget.App.Button"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="40dp"
        android:textAllCaps="false"
        android:text="@string/profile_edit_save"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <include
        android:id="@+id/profile_progress_layout"
        android:visibility="gone"
        layout="@layout/loading_layout"/>

</androidx.constraintlayout.widget.ConstraintLayout>
