<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/feed_error_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/feed_error"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/feed_error_layout"/>

    <TextView
        android:id="@+id/feed_error_layout"
        android:textAppearance="@style/TextAppearance.App.H1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="24dp"
        android:text="@string/feed_error" />

    <TextView
        android:id="@+id/feed_error_description"
        android:textAppearance="@style/TextAppearance.App.H2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="60dp"
        android:textAlignment="center"
        android:gravity="center"
        android:text="@string/feed_error_description"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/feed_error_layout" />

    <Button
        android:id="@+id/feed_error_refresh"
        style="@style/Widget.App.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/feed_error_refresh"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/feed_error_description"/>

</RelativeLayout>
