<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/feed_empty_emptiness_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/emptiness"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/feed_empty_emptiness" />

    <TextView
        android:id="@+id/feed_empty_emptiness"
        android:textAppearance="@style/TextAppearance.App.H1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:text="@string/feed_emptiness"
        android:layout_centerInParent="true" />

    <TextView
        android:id="@+id/feed_empty_advise"
        android:textAppearance="@style/TextAppearance.App.H2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="60dp"
        android:textAlignment="center"
        android:gravity="center"
        android:text="@string/feed_emptiness_advise"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/feed_empty_emptiness" />

    <Button
        android:id="@+id/feed_empty_find_friends"
        style="@style/Widget.App.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/feed_emptiness_find_friends"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/feed_empty_advise" />

</RelativeLayout>
